Update dependencies, format modules